--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ var/*
 src/System/tmp/*
 src/Contents/Settings.js
 src/Contents/Resources/favicon.ico
+src/Contents/Resources/ico.png
 src/Contents/Resources/startup/*
