FIX: small git relative fix

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/Contents/Settings.js
 src/Contents/Resources/favicon.ico
 src/Contents/Resources/ico.png
 src/Contents/Resources/startup/*
+src/Contents/Resources/webapp/ico.png
