--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-!.gitignore
-!.commit
-bin/*
-builds/*
-dev/*
-etc/*
-var/*
-src/System/tmp/*
-src/Contents/Settings.js
-src/Contents/Resources/favicon.ico
-src/Contents/Resources/ico.png
-src/Contents/Resources/startup/*
-src/Contents/Resources/webapp/ico.png
+.DS_Store
